# openapi-cpp

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENCE.md  README.md  README_hk.md  README_zh.md
demo/: CMakeLists.txt
demo/src/: const_value.h  http.cpp  logger.cpp  websocket_test.cpp
demo/src/proto/: notification.pb.cc  notification.pb.h  quote.pb.cc  quote.pb.h
docs/: user_guide.md
include/: callback.h  custom_string.h  http.h  http.rs.h  lib.h  lib.rs.h  logger.h  logger.rs.h  logger_format.h  websocket.h  ws.rs.h
proto/: notification.proto  quote.proto
src/: CMakeLists.txt  http.cpp  lib.cpp  websocket.cpp
src/cxx/: README.md  http.rs.cc  lib.rs.cc  logger.rs.cc  ws.rs.cc
